Decrease more the maximum width of the title of WRT mobile to avoid problems on safari mobile.

--- a/scss/partials/_wrt.scss
+++ b/scss/partials/_wrt.scss
@@ -79,7 +79,7 @@ div.wrt-popup {
         font-size: 16px;
         color: $deep_navy;
         white-space: nowrap;
-        max-width: calc(100% - 40px);
+        max-width: calc(100% - 64px);
         overflow: hidden;
         text-overflow: ellipsis;
         display: inline-block;
